@@ -106,6 +106,9 @@ Highlight the names of all users.
 \fB\-\-highlight\-dirs\fR
 Highlight the names of all directories.
 .TP
+\fB\-\-highlight\-colour FFFFFF\fR
+Highlighted text colour in hex.
+.TP
 \fB\-\-file\-extensions\fR
 Show filename extensions only.
 .TP
@@ -177,6 +180,9 @@ Hide one or more display elements from the list below:
 Separate multiple elements with commas (eg 'mouse,progress')
 
 .TP
+\fB\-\-hash\-seed SEED\fR
+Change the seed of hash function.
+.TP
 \fB\-o, \-\-output\-ppm\-stream FILE\fR
 Output a PPM image stream to a file ('\-' for STDOUT).
 
@@ -185,6 +191,9 @@ This will automatically hide the progress bar initially and enable 'stop\-at\-en
 .TP
 \fB\-r, \-\-output\-framerate FPS\fR
 Framerate of output (25,30,60). Used with \-\-output\-ppm\-stream.
+.TP
+\fB\-\-output\-custom\-log FILE\fR
+Output a custom format log file ('\-' for STDOUT).
 .TP
 \fB\-\-load\-config CONFIG_FILE\fR
 Load a config file.
