@@ -1,6 +1,9 @@
 0.29:
  * Fix handling of avatars for UTF-8 usernames on MACOSX (Christian Köstlin).
  * Exposed --time-scale option (previously only available interactively).
+ * Added --highlight-colour option.
+ * Added --hash-seed option.
+ * Added --output-custom-log option.
 
 0.28:
  * Bazaar support for merged commits (Nick Moffit).
